# WorktreeManager

./: .gitignore  .prettierignore  README.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
homebrew/: README.md  worktreemanager.rb
scripts/: bump-version.mjs
src/: App.tsx  index.css  main.tsx  themes.ts  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: claude_config.rs  cursor.rs  cursor_state.rs  doppler.rs  editor.rs  git.rs  mod.rs  node_deps.rs  vscode_task.rs  wm-start-claude.sh.tmpl  workspace.rs
src/components/setup/: SetupWizard.test.tsx  SetupWizard.tsx  TokenInput.tsx
src/components/sidebar/: AddRepoModal.tsx  AddWorkspaceModal.tsx  EditRepoModal.tsx  EditWorkspaceModal.tsx  LinearKeyField.tsx  RemoveRepoModal.tsx  RemoveWorkspaceModal.tsx  RepoList.tsx  WorkspaceList.tsx  WorkspaceRepoEditor.tsx
src/components/ui/: Badge.tsx  Button.tsx  CustomThemeEditor.tsx  EditorPicker.tsx  ErrorBoundary.tsx  Icons.tsx  Input.tsx  Modal.tsx  ThemePicker.tsx
src/components/worktree/: WorktreeCard.tsx  (+7 more)
src/contexts/: LinearContext.tsx  useLinear.ts
src/hooks/: useEphemeralToast.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLinearKeyValidation.ts  useStore.ts  useUpdater.ts  useWorktreeData.ts  useWorktreeListKeyboardShortcuts.ts
src/services/: linear.test.ts  linear.ts  openEditor.ts  store.ts
