[package]
name = "worktree-manager"
version = "0.3.1"
description = "Desktop worktree manager with Linear and GitHub integration"
authors = ["Pedro Bahamondez"]
license = "MIT"
repository = "https://github.com/pibahamondesw/WorktreeManager"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
md5 = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
